test_scripts/errors/missing_semicolon_let.stderr
Parse Error:
 1 | let x = 5
             ^
Error: Expected semicolon after `let <ident> = <expr>`, found EOF
Failed to parse script
